[project]
name = "luxtelligence-lnoi400-forge"
version = "1.0.0"
authors = [{name = "Flexcompute Inc.", email = "info@flexcompute.com"}]
description = "Luxtelligence LNOI400 PDK implementation for PhotonForge"
readme = "README.md"
dependencies = ["photonforge ~= 1.0.0rc1"]

[project.optional-dependencies]
test = ["pytest >= 7.2"]

[tool.setuptools]
packages = ["luxtelligence_lnoi400_forge"]

[tool.black]
line-length = 100

[build-system]
requires = ["setuptools >= 45"]
build-backend = "setuptools.build_meta"
